[package]
name = "rust-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", features = ["std", "serde", "max_level_trace", "release_max_level_warn"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
rocket_cors = { version = "0.5.1", features = ["serialization"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rusqlite = "0.14.0"
toml = "0.5.8"
simple-logging = "2.0.2"
ring = "0.13.5"
rocket = { version = "0.4.10", features= ["tls"] }
privdrop = "0.5.0"
data-encoding = "2.3.2"
native-tls = "0.2.7"
jsonwebtoken = "5.0.1"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json","sqlite_pool","serve","helmet","uuid"]