[package]
name = "typify-backend-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", features = ["std", "serde", "max_level_trace", "release_max_level_warn"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
toml = "0.5.8"
simple-logging = "2.0.2"
rocket = "0.4.7"
postgres = "0.15"

[dependencies.rocket_contrib]
verion = "0.4.7"
default-features = false
features = ["json"]